Fixed error on empty topic validation constraints